# anomaly-detection-servic

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/alerting/: telegram_alert.py
app/api/: dependencies.py  routes.py
app/detection/: base.py  cusum_detector.py  ensemble.py  iqr_detector.py  isolation_forest.py  prophet_detector.py  zscore_detector.py
app/models/: schemas.py
app/preprocessing/: aggregator.py  cleaner.py
app/visualization/: plots.py
dashboard/: streamlit_app.py
notebooks/: 01_eda.ipynb
scripts/: generate_synthetic.py  preprocess.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_detectors.py
