[project]
name = "anomaly-detection-service"
version = "0.1.0"
description = "Anomaly detection service for e-commerce metrics"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "prophet>=1.1,<2",
    "scikit-learn>=1.4,<2",
    "plotly>=5.20,<6",
    "streamlit>=1.33,<2",
    "python-dotenv>=1.0,<2",
    "requests>=2.31,<3",
    "statsmodels>=0.14,<1",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
